# SMS-APP

./: MANIFEST.in  pyproject.toml  test_sms.py
sms_app/: api.py  hooks.py  patches.txt  sms_client.py
sms_app/config/: desktop.py
sms_app/doctype/sms_header/: sms_header.json
sms_app/doctype/sms_log/: sms_log.json
sms_app/doctype/sms_provider/: sms_provider.json
sms_app/doctype/sms_recipient/: sms_recipient.json
sms_app/doctype/sms_template/: sms_template.json
sms_app/mtech/: __init__.py  sms_client.py  token_manager.py  utils.py
sms_app/mtech/doctype/mtech_sms_broadcast/: mtech_sms_broadcast.js  mtech_sms_broadcast.json  mtech_sms_broadcast.py
sms_app/mtech/doctype/mtech_sms_broadcast_contact/: mtech_sms_broadcast_contact.json  mtech_sms_broadcast_contact.py
sms_app/mtech/doctype/mtech_sms_log/: mtech_sms_log.json  mtech_sms_log.py
sms_app/mtech/doctype/mtech_sms_settings/: mtech_sms_settings.js  mtech_sms_settings.json  mtech_sms_settings.py
sms_app/mtech/doctype/mtech_sms_template/: mtech_sms_template.json  mtech_sms_template.py
sms_app/sms_app/sms_static_param/: sms_static_param.json
