[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "sms_app"
version = "0.0.1"
description = "Generic SMS integration app for Frappe/ERPNext"
authors = [
    { name="Ronald Ambundo", email="ambundoronald8@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "frappe>=14.0.0"
]